--- a/AdoptApp/src/main/resources/application.properties
+++ b/AdoptApp/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto = create
+project.jwt.signKey: Bu:GW8bgPlEw
+project.jwt.expirationMinutes: 1440
+
 
 
