--- a/AdoptApp/src/main/resources/static/adopt-frontend/package.json
+++ b/AdoptApp/src/main/resources/static/adopt-frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.16.6",
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "http-proxy-middleware": "^0.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -14,6 +15,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-toasts": "^3.0.3",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
