--- a/AdoptApp/src/main/resources/static/adopt-frontend/package.json
+++ b/AdoptApp/src/main/resources/static/adopt-frontend/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "http-proxy-middleware": "^0.19.1",
+    "mdbreact": "^4.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.8.0",
