--- a/AdoptApp/src/main/resources/static/adopt-frontend/package.json
+++ b/AdoptApp/src/main/resources/static/adopt-frontend/package.json
@@ -8,6 +8,7 @@
     "http-proxy-middleware": "^0.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-file-base64": "^1.0.3",
     "react-intl": "^2.8.0",
     "react-notifications": "^1.4.3",
     "react-redux": "^7.0.3",
