--- a/AdoptApp/src/main/resources/static/adopt-frontend/package.json
+++ b/AdoptApp/src/main/resources/static/adopt-frontend/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "http-proxy-middleware": "^0.19.1",
     "mdbreact": "^4.14.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-file-base64": "^1.0.3",
