--- a/AdoptApp/src/main/resources/static/adopt-frontend/package.json
+++ b/AdoptApp/src/main/resources/static/adopt-frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "antd": "^3.16.6",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "http-proxy-middleware": "^0.19.1",
-    "mdbreact": "^4.14.0",
+    "mdbootstrap": "^4.8.5",
+    "mdbreact": "^4.18.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
