--- a/AdoptApp/src/main/resources/static/adopt-frontend/package.json
+++ b/AdoptApp/src/main/resources/static/adopt-frontend/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.16.6",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "google-map-react": "^1.1.4",
     "http-proxy-middleware": "^0.19.1",
     "mdbootstrap": "^4.8.5",
     "mdbreact": "^4.18.0",
