--- a/AdoptApp/src/main/resources/application.properties
+++ b/AdoptApp/src/main/resources/application.properties
@@ -1,14 +1,23 @@
-#h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
 #Datasource
-spring.datasource.url=jdbc:h2:file:~/testdb;AUTO_SERVER=TRUE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto = create
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/adoptapp?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=chrispaul8
+spring.jpa.hibernate.ddl-auto=update
 project.jwt.signKey: Bu:GW8bgPlEw
 project.jwt.expirationMinutes: 1440
+spring.datasource.driver.class=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+##h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+##Datasource
+#spring.datasource.url=jdbc:h2:file:~/testdb;AUTO_SERVER=TRUE
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.hibernate.ddl-auto = create
+#project.jwt.signKey: Bu:GW8bgPlEw
+#project.jwt.expirationMinutes: 1440
 
 
