--- a/adopt-frontend/package.json
+++ b/adopt-frontend/package.json
@@ -13,6 +13,7 @@
     "mdbreact": "^4.20.0",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-file-base64": "^1.0.3",
     "react-intl": "^2.9.0",
