--- a/adopt-frontend/package.json
+++ b/adopt-frontend/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
+    "react-switch": "^5.0.1",
     "react-toasts": "^3.0.4",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
