--- a/adopt-frontend/package.json
+++ b/adopt-frontend/package.json
@@ -16,9 +16,12 @@
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-file-base64": "^1.0.3",
+    "react-image-gallery": "^0.9.1",
     "react-intl": "^2.9.0",
+    "react-leaf-carousel": "^1.2.2",
     "react-notifications": "^1.4.3",
     "react-redux": "^7.1.1",
+    "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
     "react-switch": "^5.0.1",
