--- a/adopt-frontend/package.json
+++ b/adopt-frontend/package.json
@@ -24,7 +24,9 @@
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
+    "react-stomp": "^4.2.0",
     "react-switch": "^5.0.1",
+    "react-talk": "^1.0.0",
     "react-toasts": "^3.0.4",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
