--- a/adopt-frontend/package.json
+++ b/adopt-frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^16.9.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
+    "react-facebook": "^8.0.4",
     "react-file-base64": "^1.0.3",
     "react-image-gallery": "^0.9.1",
     "react-intl": "^2.9.0",
@@ -28,6 +29,7 @@
     "react-switch": "^5.0.1",
     "react-talk": "^1.0.0",
     "react-toasts": "^3.0.4",
+    "react-twitter-embed": "^3.0.3",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
